PR07.2 after teacher review